manifests/mikrotik-exporter/resources/networkpolicies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mikrotik-exporter
  namespace: mikrotik-exporter
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: mikrotik-exporter
  ingress:
  # Prometheus
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": prometheus
        app.kubernetes.io/name: prometheus
    toPorts:
    - ports:
      - port: "9436"
        protocol: TCP
  egress:
  # DNS
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
  # Mikrotik
  - toFQDNs:
      - matchName: ${address}
